# template

./: CMakeLists.txt  homeAutomationConfig.h.in  main.cpp
